grignote.css
/* Add a dark background color with a little bit see-through */ 
.navbar {
    margin-bottom: 0;
    background-color: rgba(255,255,255,0.9);
}

.carousel-inner img {
    /*-webkit-filter: grayscale(90%);*/
    /*filter: grayscale(90%);*/ /* make all photos black and white */ 
    /*width: 100%; /* Set width to 100% */
    margin: auto;


  min-width: 100%;
  width: 100%;
  object-fit: cover;
  /*max-height: 65%;*/
}

.carousel-caption h3 {
    color: #fff !important;
}

@font-face {
    font-family: gricanard;
    src: url('gricanard.ttf');
}

.grignoteNavTitle {
  color: #291a0f;
  font-family: gricanard;
  float:left;
  height:50px;
  padding:5px 5px;
  font-size:23pt;
  line-height:20px
  -webkit-text-stroke: 1px #ead7c8;
   text-shadow:
      2px 2px 0 #ead7c8,
      -1px -1px 0 #ead7c8,  
      1px -1px 0 #ead7c8,
      -1px 1px 0 #ead7c8,
      1px 1px 0 #ead7c8;

}

.grignoteLogo {
  color: #291a0f;
  font-family: gricanard;
  font-size: 33pt;
    line-height:20px

  -webkit-text-stroke: 1px #ead7c8;
   text-shadow:
      2px 2px 0 #ead7c8,
      -1px -1px 0 #ead7c8,  
      1px -1px 0 #ead7c8,
      -1px 1px 0 #ead7c8,
      1px 1px 0 #ead7c8;

}

/*@media (max-width: 600px) {
    .carousel-caption {
        display: none; /* Hide the carousel text when the screen is less than 600 pixels wide 
    }
}*/

